--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <script src="https://npmcdn.com/@turf/turf/turf.min.js"></script>
     <!-- <script src="js/MidTerm-setup.js"></script> -->
     <!-- <script src="js/bootstrap.js"></script> -->
-    <script src="js/decode.js"></script>
+    <!-- <script src="js/decode.js"></script> -->
     <script src="js/main.js"></script>
   </body>
 </html>
